# PTDL-IE224

./: LICENSE  Makefile  README.md  pyproject.toml
data/interim/: handled_missing_values.csv  test_handled_missing_values.csv
data/processed/: encoder.pkl  scaler.pkl  test_normalized.csv  train_normalized.csv
models/ANN/: age_prediction_ann.sav
models/Linear-Regression/: linear_regression_model.sav
models/Random-Forest/: random_forest_regression.sav
models/Tree-decision/: 3.3-Decision_tree-.ipynb
notebooks/: 1.0-clean-data.ipynb  1.1-variable-statistics.ipynb  2.1-EDA-ANOVA.ipynb  2.2-EDA-correlation.ipynb  2.3-EDA-Distributed.ipynb  2.4-EDA-Shape.ipynb  3.1-ANN.modeling.ipynb  3.2-Linear-Regrestion-Modeling.ipynb  3.3-Decision_tree-.ipynb  3.3-Decision_tree.ipynb  3.4-Random_forest_regressor.ipynb
src/: __init__.py  features.py
